Fix: Scrollbar background-color 수정
페이지에 맞지 않은 색상 문제로 black에서 lightgray로 수정

--- a/frontend/src/components/chat/MatchChat.css
+++ b/frontend/src/components/chat/MatchChat.css
@@ -1,151 +1,150 @@
-
 #chatContainer {
-    position: absolute;
-    z-index: 0;
-    width: 100%;
-    height: 100%;
+  position: absolute;
+  z-index: 0;
+  width: 100%;
+  height: 100%;
 }
 /* 채팅창 크기 */
 
 #chatToolbar {
-    height: 40px;
-    background-color: black;
-    box-sizing: border-box;
-    font-weight: bold;
-    font-size: 18px;
-    text-align: center;
-    padding-top: 3px;
-    border-top-left-radius: 6px;
-    border-top-right-radius: 6px;
-    color: #ffffff;
+  height: 40px;
+  background-color: black;
+  box-sizing: border-box;
+  font-weight: bold;
+  font-size: 18px;
+  text-align: center;
+  padding-top: 3px;
+  border-top-left-radius: 6px;
+  border-top-right-radius: 6px;
+  color: #ffffff;
 }
 /* 채팅창 상단바 */
 
 #closeButton {
-    position: absolute;
-    right: 0;
-    top: 0;
+  position: absolute;
+  right: 0;
+  top: 0;
 }
 
 #chatComponent {
-    background-color: #ffffff;
-    position: absolute;
-    z-index: 99999;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    margin: auto;
-    height: calc(100% - 30px);
-    width: calc(100% - 30px);
-    border-radius: 20px;
+  background-color: #ffffff;
+  position: absolute;
+  z-index: 99999;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: auto;
+  height: calc(100% - 30px);
+  width: calc(100% - 30px);
+  border-radius: 20px;
 }
 /* 채팅창 배경 */
 
 .message-wrap {
-    padding: 0 15px;
-    height: calc(100% - 80px);
-    overflow: auto;
+  padding: 0 15px;
+  height: calc(100% - 80px);
+  overflow: auto;
 }
 /* 보여지는 채팅 창 길이?? */
 
 .message {
-    position: relative;
-    padding: 7px 0;
+  position: relative;
+  padding: 7px 0;
 }
 
 .user-img {
-    position: absolute;
-    border-radius: 45px;
-    width: 30px;
-    height: 30px;
-    top: 15px;
+  position: absolute;
+  border-radius: 45px;
+  width: 30px;
+  height: 30px;
+  top: 15px;
 }
 /* 유저 사진 */
 
 .msg-detail {
-    width: calc(100% - 35px);
-    display: inline-block;
+  width: calc(100% - 35px);
+  display: inline-block;
 }
 /* 메시지랑 유저 사진 사이 거리 */
 
 .msg-detail p {
-    margin-left: 10px;
-    margin-right: 10px;
-    font-size: 15px;
+  margin-left: 10px;
+  margin-right: 10px;
+  font-size: 15px;
 }
 /* 메시지 폰트 크기 */
 
 .msg-info p {
-    font-size: 0.8em;
-    color: #000000;
+  font-size: 0.8em;
+  color: #000000;
 }
 /* 유저 닉네임 */
 
 .msg-date p {
-    font-size: 0.4em;
-    color: #000000;
-    margin-right: 50px;
-    margin-left: 50px;
+  font-size: 0.4em;
+  color: #000000;
+  margin-right: 50px;
+  margin-left: 50px;
 }
 
 .msg-content {
-    position: relative;
-    margin-top: 5px;
-    border-radius: 5px;
-    padding: 8px;
-    color: #000000;
-    width: auto;
-    max-width: 70%;
+  position: relative;
+  margin-top: 5px;
+  border-radius: 5px;
+  padding: 8px;
+  color: #000000;
+  width: auto;
+  max-width: 70%;
 }
 /* 채팅창 */
 
 span.triangle {
-    border-radius: 2px;
-    height: 8px;
-    width: 8px;
-    z-index: 0;
-    top: 12px;
-    display: block;
-    -webkit-transform: rotate(45deg);
-    transform: rotate(45deg);
-    position: absolute;
+  border-radius: 2px;
+  height: 8px;
+  width: 8px;
+  z-index: 0;
+  top: 12px;
+  display: block;
+  -webkit-transform: rotate(45deg);
+  transform: rotate(45deg);
+  position: absolute;
 }
 /* 말풍선 옆 사각형 */
 
 .text {
-    word-break: break-all;
-    color: #000000;
+  word-break: break-all;
+  color: #000000;
 }
 
 /* Start message from other user */
 
 .message.left .msg-detail .msg-info {
-    text-align: left;
+  text-align: left;
 }
 
 .message.left .msg-detail {
-    padding-left: 45px;
+  padding-left: 45px;
 }
 /* 상대방 사진이랑 메시지창 거리 */
 
 .message.left .user-img {
-    left: 5px;
-    border: 1px solid #646cff;
+  left: 5px;
+  border: 1px solid #646cff;
 }
 /* 상대방 사진 위치 */
 
 .message.left .msg-detail .msg-content {
-    background-color: #f0f0f0;
-    float: left;
+  background-color: #f0f0f0;
+  float: left;
 }
 /* 상대방 메시지창 */
 
 .message.left .msg-detail .msg-content span.triangle {
-    background-color: #f0f0f0;
-    border-bottom-width: 0;
-    border-left-width: 0;
-    left: -3px;
+  background-color: #f0f0f0;
+  border-bottom-width: 0;
+  border-left-width: 0;
+  left: -3px;
 }
 /* 상대방 메시지창 좌측하단 사각형 */
 
@@ -154,87 +153,87 @@ span.triangle {
 /* Start my messages */
 
 .message.right .msg-detail .msg-info {
-    text-align: right;
+  text-align: right;
 }
 /* 닉네임 */
 
 .message.right .user-img {
-    right: 5px;
-    border: 1px solid #646cff;
+  right: 5px;
+  border: 1px solid #646cff;
 }
 /* 채팅창 유저 이미지 주변 원 테두리*/
 
 .message.right .msg-detail .msg-content {
-    right: 15px;
-    background-color: lightgray;
-    float: right;
+  right: 15px;
+  background-color: lightgray;
+  float: right;
 }
 /* 채팅창 내가 보낸 메시지 창*/
 
 .message.right .msg-detail .msg-content span.triangle {
-    background-color: lightgray;
-    border-bottom-width: 0;
-    border-left-width: 0;
-    right: -4px;
+  background-color: lightgray;
+  border-bottom-width: 0;
+  border-left-width: 0;
+  right: -4px;
 }
 /* 채팅창 내가 보낸 메시지 창 우측 하단 사각형*/
 
-.message.right .msg-date{
-    text-align: right;
+.message.right .msg-date {
+  text-align: right;
 }
 
 /* End my messages */
 
 #messageInput {
-    position: absolute;
-    bottom: 0px;
-    width: 100%;
-    background-color: #ffffff;
-    text-align: center;
-    padding: 10px 0px;
-    height: 60px;
-    border-bottom-left-radius: 6px;
-    border-bottom-right-radius: 6px;
+  position: absolute;
+  bottom: 0px;
+  width: 100%;
+  background-color: #ffffff;
+  text-align: center;
+  padding: 10px 0px;
+  height: 60px;
+  border-bottom-left-radius: 6px;
+  border-bottom-right-radius: 6px;
 }
 /* 메시지 입력창 테두리*/
 
 #messageInput input {
-    width: 90%;
-    height: 100%;
-    border: none;
-    outline: none;
-    font-size: 14px;
-    margin-left: -6%;
-    color: #000000;
+  width: 90%;
+  height: 100%;
+  border: none;
+  outline: none;
+  font-size: 14px;
+  margin-left: -6%;
+  color: #000000;
 }
 /* 메시지 입력창 입력된 메시지*/
 
 #sendButton {
-    background-color: #646cff;
-    position: absolute;
-    right: 10px;
-    top: 0;
-    bottom: 3px;
-    margin: auto;
-    border: 1px solid #646cff;
-    box-shadow: none !important;
+  background-color: #646cff;
+  position: absolute;
+  right: 10px;
+  top: 0;
+  bottom: 3px;
+  margin: auto;
+  border: 1px solid #646cff;
+  box-shadow: none !important;
 }
 /* 전송버튼 주변 원 */
 
 #sendButton {
-    margin-left: 2px !important;
+  margin-left: 2px !important;
 }
 
 ::-webkit-scrollbar {
-    width: 8px;
+  width: 8px;
 }
 /* 스크롤바 두께 */
 
 ::-webkit-scrollbar-thumb {
-    background-color: black;
+  background-color: lightgray;
 }
 /* 스크롤바 움직이는 녀석 색 */
 
 .chatComponentLight ::-webkit-scrollbar-thumb {
-    background-color: #eeeeee !important;
+  background-color: #eeeeee !important;
 }
